--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -17,17 +17,21 @@
     margin-bottom: 20px;
     background-color: #363b40 ;
     color:white;
+    align-items: inherit !important;
 }
 
-button {
-    margin-top: 32px;
+.find {
+    margin-top: 9%;
     margin-left: 70px;
+    height: 20%;
+
 }
 
 label {
     font-size:18px;
     margin-bottom: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 5%;
     
 }
 
