Rendering of API response in Bootstrap table

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,9 @@
 .App {
   text-align: center;
+ 
 }
-
+body{
+  background-image: url('./images/night.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
